--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,6 @@
   ],
   "dependencies": {
     "angular-sanitize": "~1.4.2",
-    "angular": "~1.4.2",
-    "bootstrap": "~3.3.5"
+    "angular": "~1.4.2"
   }
 }
